# web-resource-crawler

./: .gitignore  README.md  gui.py  pyproject.toml  requirements.txt  test_asmr_api.py  test_asmr_one.py  test_multi_url.py  启动.bat  打包.bat  整合打包.bat
core/: __init__.py  asmr_one.py  config.py  constants.py  controller.py  downloader.py  fetcher.py  parser.py  scraper.py  translator.py  unpacker.py
tests/: __init__.py  test_asmr_one.py  test_config.py  test_constants.py  test_controller.py  test_downloader.py  test_fetcher.py  test_gui.py  test_scraper.py  test_unpacker.py
web/: index.html  launcher.pyw  server.py  test.py
