[project]
name = "web-resource-crawler"
version = "0.9.0"
description = "多功能网页资源爬虫 — 支持图片/音频/视频/HLS流媒体批量下载"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Web Resource Crawler Team"}]
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "PyQt5>=5.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
